<resources>
    <string name="app_name">Studio Ghibli Movie</string>
    //home screen
    <string name="select_year">Please select a year below to see which Studio Ghibli miovies were released.</string>
    <string name="select_year_dropdown">Select Year</string>
    <string name="go_button">Go!</string>

    //movie list fragment
    <string name="list_instructions">Tap a movie title below to get more information about it!</string>
    <string name="title">Title:</string>
    <string name="director">Director:</string>
    <string name="producer">Producer:</string>
    <string name="release_date">Release Date:</string>
    <string name="description">Description:</string>

    //detail fragment
    //Year dropdown
    <string-array name="years_array">
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

</resources>
