<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="32dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="32dp"
        android:padding="5dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/director"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/producer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:padding="5dp"
        android:text="@string/producer"
        app:layout_constraintStart_toStartOf="@+id/director"
        app:layout_constraintTop_toBottomOf="@+id/director" />

    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/release_date"
        app:layout_constraintStart_toStartOf="@+id/producer"
        app:layout_constraintTop_toBottomOf="@+id/producer" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:padding="5dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/releaseDate"
        app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

    <TextView
        android:id="@+id/movieDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="@+id/movieTitle"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <TextView
        android:id="@+id/movieProducer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="@+id/movieDirector"
        app:layout_constraintTop_toBottomOf="@+id/movieDirector" />

    <TextView
        android:id="@+id/movieReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="@+id/movieProducer"
        app:layout_constraintTop_toBottomOf="@+id/movieProducer" />

    <TextView
        android:id="@+id/movieDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="@+id/movieReleaseDate"
        app:layout_constraintTop_toBottomOf="@+id/movieReleaseDate" />

</androidx.constraintlayout.widget.ConstraintLayout>